# near-ncd-I-ft-ico-rs

./: README.md  build.sh
CONTRACT-A-EXCHANGE/: Cargo.toml  build.sh
CONTRACT-A-EXCHANGE/res/: contract_a_exchange.wasm
CONTRACT-A-EXCHANGE/src/: lib.rs
CONTRACT-B-FT-ICO/: Cargo.toml
CONTRACT-B-FT-ICO/ft/src/: lib.rs
CONTRACT-B-FT-ICO/res/: fungible_token.wasm
ft/src/: lib.rs
res/: defi.wasm  fungible_token.wasm
