[package]
name = "contract-a-exchange"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "AGNICO Ltd. <info@agnico.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.1"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []