[package]
name = "CONTRACT-B-FT-ICO"
version = "0.0.1"
authors = ["Near Inc <hello@near.org>", "AGNICO Ltd. <info@agnico.net>"]
edition = "2018"

[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.1"

# remember to include a line for each contract
fungible-token = { path = "./ft" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "ft",
  "test-contract-defi",
]
